[tool]
[tool.poetry]
name = "action-rules"
version = "0.0.4"
homepage = "https://github.com/lukassykora/action-rules"
description = "The package for action rules mining using Action-Apriori (Apriori Modified for Action Rules Mining).."
authors = ["Lukas Sykora <lukas.sykora@vse.cz>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
packages = [
    { include = "action_rules",  from = "src"},
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "8.0.1"
pandas = "^2.2.2"

black  = { version = "^24.4.2", optional = true}
isort  = { version = "^5.13.2", optional = true}
flake8  = { version = "^7.0.0", optional = true}
flake8-docstrings = { version = "^1.7.0", optional = true }
mypy = {version = "^1.10.0", optional = true}
pytest  = { version = "^8.2.1", optional = true}
pytest-cov  = { version = "^5.0.0", optional = true}
tox  = { version = "^4.15.0", optional = true}
virtualenv  = { version = "^20.26.2", optional = true}
pip  = "^24.0"
mkdocs  = { version = "^1.6.0", optional = true}
mkdocs-include-markdown-plugin  = { version = "^6.1.1", optional = true}
mkdocs-material  = { version = "^9.5.25", optional = true}
mkdocstrings  = { version = "^0.25.1", optional = true}
mkdocs-material-extensions  = { version = "^1.3.1", optional = true}
twine  = { version = "^5.1.0", optional = true}
mkdocs-autorefs = {version = "^1.0.1", optional = true}
pre-commit = {version = "^3.7.1", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}
mkdocstrings-python = "^1.10.3"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.poetry.scripts]
action-rules = 'action_rules.cli:main'

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
